Fixed problem with .collapse .in background on large width resolution

--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,13 @@ header .navbar-toggle {
 header .navbar-default .navbar-toggle .icon-bar {
 	background-color: white;
 }
-header .navbar-collapse {
-	background-color: rgba(0, 0, 0, .5);
+
+@media only screen and (max-width: 768px) {
+	header .navbar-collapse.in {
+		background-color: rgba(0, 0, 0, .5);
+	}
 }
+
 
 /*  Footer Navigation */
 footer .navbar-default {
